--- a/config.org
+++ b/config.org
@@ -461,6 +461,7 @@
 	  lsp-signature-auto-activate nil)
 
     (global-set-key (kbd "C-x o") 'ace-window)
+    (global-set-key [f10] 'recompile)
 
   #+END_SRC
 
