--- a/config.org
+++ b/config.org
@@ -122,7 +122,7 @@
 
    #+BEGIN_SRC emacs-lisp
 
-     (set-frame-font "Hack 11" nil t)
+     (set-frame-font "Hack Nerd Font 11" nil t)
 
    #+END_SRC
 
@@ -180,7 +180,7 @@
 
    #+END_SRC
    
-
+   
 * General Packages
 
 ** Evil 
